--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     ]
   },
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "@devacademy/eslint-config": "^1.8.0",
     "@types/express": "^4.17.14",
-    "@types/jest": "^29.2.5",
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
     "@types/superagent": "^4.1.15",
@@ -61,7 +61,7 @@
     "ts-node": "^10.9.1",
     "typescript": "~4.8.4",
     "vite": "^4.3.6",
-    "vitest": "^0.31.0"
+    "vitest": "^0.31.1"
   },
   "prettier": {
     "semi": false,
