--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   },
   "devDependencies": {
     "@devacademy/eslint-config": "^1.8.0",
+    "@tanstack/react-query": "^4.29.12",
+    "@tanstack/react-query-devtools": "^4.29.12",
     "@types/express": "^4.17.14",
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
@@ -52,15 +54,12 @@
     "prettier": "2.6.1",
     "react": "^18.0.2",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.4",
     "react-router-dom": "^6.11.1",
-    "redux": "^4.1.1",
-    "redux-thunk": "^2.4.2",
     "superagent": "7.1.1",
     "supertest": "^6.2.2",
     "ts-node": "^10.9.1",
     "typescript": "~4.8.4",
-    "vite": "^4.3.6",
+    "vite": "^4.3.9",
     "vitest": "^0.31.1"
   },
   "prettier": {
