fix: install knex

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "express": "^4.17.2",
+    "knex": "^2.3.0",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
