--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "superagent": "7.1.1",
     "supertest": "^6.2.2",
     "ts-node": "^10.9.1",
-    "typescript": "~4.8.4",
+    "typescript": "^5.1.6",
     "vite": "^4.3.9",
     "vitest": "^0.31.1"
   },
