--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "description": "React Query with Queries and Mutations, using Pokémon data",
   "main": "server/index",
   "scripts": {
-    "start": "node dist/server/index.js",
-    "dev": "run-p dev:server dev:client",
+    "start": "node dist/server.js",
+    "dev": "run-p dev:client dev:server",
     "dev:client": "vite",
-    "dev:server": "nodemon server/index.ts",
-    "build": "npm run webpack",
+    "dev:server": "tsx watch server/index.ts",
+    "build": "run-s build:client build:server",
     "build:client": "vite build",
-    "build:server": "tsc -p server/tsconfig.json",
+    "build:server": "esbuild --packages=external --platform=node --format=esm --outfile=dist/server.js --bundle server/index.ts",
     "knex": "knex --knexfile server/db/knexfile.js",
     "test": "vitest",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
